<resources>

    <!--application name-->
    <string name="app_name">SRHR Sign Language</string>

    <!--bottom navigation title-->
    <string name="title_nav_category">Topics</string>
    <string name="title_nav_favorite">Movies</string>
    <string name="title_nav_home">Recent</string>
    <string name="title_nav_reach">Contact</string>
    <string name="title_nav_settings">Settings</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Deafop+Kenya</string>

    <!--settings-->
    <string name="title_setting_theme">Dark Theme</string>
    <string name="sub_title_setting_theme">Better for eyesight and battery life</string>
    <string name="title_setting_list">Display Video</string>
    <string name="single_choice_default">Default</string>
    <string name="single_choice_compact">Compact</string>
    <string name="title_setting_category">Display Category</string>
    <string name="single_choice_list">List</string>
    <string name="single_choice_grid_2">Grid (2 column)</string>
    <string name="single_choice_grid_3">Grid (3 column)</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="sub_title_setting_privacy">App Terms &amp; Policies</string>
    <string name="title_setting_rate">Rate Us</string>
    <string name="sub_title_setting_rate">Leave a review on the Google Play</string>
    <string name="title_setting_more">More Apps</string>
    <string name="sub_title_setting_more">More apps from developer</string>
    <string name="title_setting_about">About</string>
    <string name="sub_title_setting_about">App Info, Build Version, Copyright</string>
    <string name="about_app_privacy_policy">Terms &amp; Policies</string>
    <string name="sub_about_app_version">Version</string>
    <string name="sub_about_app_copyright">Copyright &#169; 2023 Deaf Outreach Program \n All rights reserved</string>

    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="network_required">Required Internet to Play Video!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="no_internet_text">There is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="no_category_found">it looks like there are no category available at this time</string>
    <string name="no_post_found">No Videos Found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_item">it looks like there are no content available at this time.</string>
    <string name="msg_search_input">Please Insert Keyword</string>

    <!--favorite-->
    <string name="favorite_add">Add to Favorite</string>
    <string name="favorite_remove">Remove Favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>

    <!--sort-->
    <string name="title_sort">Videos sorted by</string>
    <string name="most_popular">Most popular</string>
    <string name="oldest">Date added (oldest)</string>
    <string name="newest">Date added (newest)</string>

    <!--package validation-->

    <!--dialog choose option-->
    <string name="dialog_ok">OK</string>

    <!--others-->
    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>
    <string name="video_count_text">Videos</string>
    <string name="views_count">views</string>
    <string name="btn_retry">Retry</string>
    <string name="search">Search</string>
    <string name="search_text">Search&#8230;</string>
    <string name="txt_suggested">Suggested</string>
    <string name="press_again_to_exit">Press again to exit app</string>

    <string name="btn_clear">Clear</string>

    <string name="country">Country</string>
    <string name="title_nav_referal">Referral Centers</string>

    <string name="no_refferal_found">Coming Soon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="app_script">App Script</string>
    <string name="share">Share your thoughts with us</string>
    <string name="submit">Submit</string>
    <string name="book">Book a call with us</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number(Optional)</string>
    <string name="subject">Subject</string>
    <string name="btn_book">Book</string>


</resources>
