<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">


    <TextView
        android:id="@+id/text_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="@dimen/text_content_title_size"
        android:textStyle="bold"
        android:text="@string/share" />

    <EditText
        android:id="@+id/edit_share"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_share"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_reach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_share"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/text_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reach"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/text_content_title_size"
        android:textStyle="bold"
        android:text="@string/book"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_book"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/subject" />

    <Button
        android:id="@+id/btn_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_subject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/btn_book" />


</RelativeLayout>